...
    <string name="sync_notification_title">Syncing library</string>
    <string name="sync_notification_text">Keeping your library up to date</string>

    <string name="actions_cancel">Cancel</string>
    <string name="actions_delete">Delete</string>
    <string name="actions_download">Download</string>
    <string name="actions_download_cancel">Cancel download</string>
    <string name="actions_star">Star</string>
    <string name="actions_unstar">Unstar</string>

    <string name="controls_shuffle">Shuffle</string>
    <string name="controls_shuffle_play">Shuffle play</string>
    <string name="controls_play">Play</string>
...
    <string name="resources_filter_artist">Artist</string>
    <string name="artist_type_artist">Artist</string>
    <string name="artist_type_album_artist">Album artist</string>
    <string name="resources_filter_genre">Genre</string>
    <string name="resources_filter_starred">Starred</string>
    <string name="resources_song_list_delete_all_content">%1$s\n\nDeleting will free %2$s</string>
    <string name="resources_song_list_delete_all_title">Delete downloads</string>
    <string name="resources_sort_by_added">Added</string>
    <string name="resources_sort_by_artist">Artist</string>
    <string name="resources_sort_by_frequently_played">Frequently played</string>
    <string name="resources_sort_by_name">Name</string>
    <string name="resources_sort_by_recently_played">Recently played</string>
    <string name="resources_sort_by_title">Title</string>
...

    <string name="downloads_title">Downloads</string>
    <string name="downloads_empty">No downloads yet.</string>
    <string name="downloads_all">all downloads</string>
    <string name="delete_all">Delete all</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="delete_download">Delete download</string>
    <string name="cancel_downloads">Cancel downloads</string>
    <string name="retry_download">Retry download</string>
    <string name="download_cancel_of">Cancel download of %1$s</string>
    <string name="download_delete_of">Delete download of %1$s</string>
    <string name="download_delete_all_of">Delete downloads of %1$s</string>
    <plurals name="downloads_albums_size">
...
